Enhance index.html with portfolio information
Updated the title and added portfolio details.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,99 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>rotsl</title>
+  <title>rotsl — Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, I’m rotsl 👋</h1>
-  <p>This website is hosted with GitHub Pages.</p>
+  <div class="container">
+    <header>
+      <h1>Rohan (rotsl)</h1>
+      <p class="subtitle">
+        Developer · Automation · Computer Vision · Applied ML
+      </p>
+    </header>
+
+    <section>
+      <h2>About</h2>
+      <p>
+        I work on automation systems, embedded tooling, computer vision,
+        and applied machine learning. Some projects are private; links are
+        provided for reference and context.
+      </p>
+    </section>
+
+    <section>
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <a href="https://github.com/rotsl/gpubuild" target="_blank">GPU Build Automation</a>
+          — system-level automation tooling
+        </li>
+        <li>
+          <a href="https://github.com/rotsl/Automator" target="_blank">Automator</a>
+          — workflow and task automation
+        </li>
+        <li>
+          <a href="https://github.com/rotsl/automator-pi" target="_blank">Automator Pi</a>
+          — Raspberry Pi automation stack
+        </li>
+        <li>
+          <a href="https://github.com/rotsl/diagnostics-pi" target="_blank">Diagnostics Pi</a>
+          — embedded diagnostics and monitoring
+        </li>
+        <li>
+          <a href="https://github.com/rotsl/IMGProcessingScikit" target="_blank">
+            Image Processing (scikit-image)
+          </a>
+          — classical computer vision experiments
+        </li>
+        <li>
+          <a href="https://github.com/rorexus/DermaScanAI" target="_blank">
+            DermaScanAI
+          </a>
+          — ML-based dermatology image analysis
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Research & ML</h2>
+      <ul>
+        <li>
+          <a href="https://www.kaggle.com/models/rbrtsl/cfu-detect" target="_blank">
+            CFU Detect Model (Kaggle)
+          </a>
+        </li>
+        <li>
+          <a href="https://www.kaggle.com/code/rbrtsl/cfu-petri-test" target="_blank">
+            CFU Petri Test Notebook (Kaggle)
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Profiles</h2>
+      <ul>
+        <li>
+          <a href="https://www.researchgate.net/profile/Rohan-B-R-2?ev=hdr_xprf" target="_blank">
+            ResearchGate
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/rotsl" target="_blank">GitHub (Primary)</a>
+        </li>
+        <li>
+          <a href="https://github.com/rorexus" target="_blank">GitHub (Secondary)</a>
+        </li>
+      </ul>
+    </section>
+
+    <div class="footer">
+      © Rohan — hosted on GitHub Pages
+    </div>
+  </div>
 </body>
 </html>
+
