Update project titles and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -12,87 +12,134 @@
       <div>
         <h1>Rohan (rotsl)</h1>
         <p class="subtitle">
-          Automation · Embedded Systems · Computer Vision · Applied ML
+          Research Automation · Computer Vision · Embedded Systems · Applied ML
         </p>
       </div>
       <button id="theme-toggle">Toggle theme</button>
     </header>
 
+    <!-- MAIN PROJECTS -->
     <section>
-      <h2>Projects</h2>
+      <h2>Main Projects</h2>
       <div class="grid">
-        <div class="card">
-          <h3>GPU Build Automation</h3>
-          <p>System-level automation for GPU environments.</p>
-          <a href="https://github.com/rotsl/gpubuild" target="_blank">View repo</a>
+
+        <div class="flip-card">
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>Automator</h3>
+              <p>Research automation system for microbial plate imaging.</p>
+            </div>
+            <div class="flip-face flip-back">
+              <p>
+                Research automation system for imaging microbial plates.
+                Includes physical operator controls and software-based
+                safety mechanisms.
+              </p>
+              <a href="https://github.com/rotsl/Automator" target="_blank">
+                View repository
+              </a>
+            </div>
+          </div>
         </div>
 
-        <div class="card">
-          <h3>Automator</h3>
-          <p>Workflow and task automation tooling.</p>
-          <a href="https://github.com/rotsl/Automator" target="_blank">View repo</a>
+        <div class="flip-card">
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>Image Processing (scikit-image)</h3>
+              <p>Classical computer vision pipelines and experiments.</p>
+            </div>
+            <div class="flip-face flip-back">
+              <p>
+                Image processing experiments using scikit-image for
+                segmentation, filtering, and analysis.
+              </p>
+              <a href="https://github.com/rotsl/IMGProcessingScikit" target="_blank">
+                View repository
+              </a>
+            </div>
+          </div>
         </div>
 
-        <div class="card">
-          <h3>Automator Pi</h3>
-          <p>Raspberry Pi–focused automation stack.</p>
-          <a href="https://github.com/rotsl/automator-pi" target="_blank">View repo</a>
-        </div>
-
-        <div class="card">
-          <h3>Diagnostics Pi</h3>
-          <p>Embedded diagnostics and monitoring.</p>
-          <a href="https://github.com/rotsl/diagnostics-pi" target="_blank">View repo</a>
-        </div>
-
-        <div class="card">
-          <h3>Image Processing (scikit-image)</h3>
-          <p>Classical computer vision experiments.</p>
-          <a href="https://github.com/rotsl/IMGProcessingScikit" target="_blank">View repo</a>
-        </div>
-
-        <div class="card">
-          <h3>DermaScanAI</h3>
-          <p>ML-based dermatology image analysis.</p>
-          <a href="https://github.com/rorexus/DermaScanAI" target="_blank">View repo</a>
-        </div>
       </div>
     </section>
 
+    <!-- SIDE PROJECTS -->
     <section>
-      <h2>Research & Models</h2>
+      <h2>Side Projects</h2>
       <div class="grid">
-        <div class="card">
-          <h3>CFU Detect</h3>
-          <p>Kaggle model for CFU detection.</p>
-          <a href="https://www.kaggle.com/models/rbrtsl/cfu-detect" target="_blank">View</a>
+
+        <div class="flip-card">
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>Automator Pi</h3>
+              <p>iOS app for Automator control.</p>
+            </div>
+            <div class="flip-face flip-back">
+              <p>
+                iOS application providing control and interface
+                for the Automator system.
+              </p>
+              <a href="https://github.com/rotsl/automator-pi" target="_blank">
+                View repository
+              </a>
+            </div>
+          </div>
         </div>
 
-        <div class="card">
-          <h3>CFU Petri Test</h3>
-          <p>Notebook for CFU analysis.</p>
-          <a href="https://www.kaggle.com/code/rbrtsl/cfu-petri-test" target="_blank">View</a>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h2>Profiles</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>ResearchGate</h3>
-          <a href="https://www.researchgate.net/profile/Rohan-B-R-2?ev=hdr_xprf" target="_blank">Visit</a>
-        </div>
-
-        <div class="card">
-          <h3>GitHub (Primary)</h3>
-          <a href="https://github.com/rotsl" target="_blank">Visit</a>
+        <div class="flip-card">
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>Diagnostics Pi</h3>
+              <p>iOS diagnostics app for Automator.</p>
+            </div>
+            <div class="flip-face flip-back">
+              <p>
+                iOS application for diagnostics and monitoring
+                of the Automator system.
+              </p>
+              <a href="https://github.com/rotsl/diagnostics-pi" target="_blank">
+                View repository
+              </a>
+            </div>
+          </div>
         </div>
 
-        <div class="card">
-          <h3>GitHub (Secondary)</h3>
-          <a href="https://github.com/rorexus" target="_blank">Visit</a>
+        <div class="flip-card">
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>GPU Build Automation</h3>
+              <p>System-level GPU environment automation.</p>
+            </div>
+            <div class="flip-face flip-back">
+              <p>
+                Automation tooling for GPU system configuration
+                and deployment.
+              </p>
+              <a href="https://github.com/rotsl/gpubuild" target="_blank">
+                View repository
+              </a>
+            </div>
+          </div>
         </div>
+
+        <div class="flip-card">
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>DermaScanAI</h3>
+              <p>ML-based dermatology image analysis.</p>
+            </div>
+            <div class="flip-face flip-back">
+              <p>
+                Machine learning system for dermatological
+                image analysis.
+              </p>
+              <a href="https://github.com/rorexus/DermaScanAI" target="_blank">
+                View repository
+              </a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
 
