Revise titles and descriptions in index.html
Updated project titles and descriptions in the portfolio.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
-  <title>rotsl — Portfolio</title>
+  <title>rotsl</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -10,7 +10,7 @@
   <div class="container">
     <header>
       <div>
-        <h1>Rohan (rotsl)</h1>
+        <h1>rotsl</h1>
         <p class="subtitle">
           Research Automation · Computer Vision · Embedded Systems · Applied ML
         </p>
@@ -23,6 +23,7 @@
       <h2>Main Projects</h2>
       <div class="grid">
 
+        <!-- Automator -->
         <div class="flip-card">
           <div class="flip-inner">
             <div class="flip-face flip-front">
@@ -42,6 +43,7 @@
           </div>
         </div>
 
+        <!-- Image Processing -->
         <div class="flip-card">
           <div class="flip-inner">
             <div class="flip-face flip-front">
@@ -63,79 +65,39 @@
       </div>
     </section>
 
-    <!-- SIDE PROJECTS -->
+    <!-- SIDE PROJECTS (SINGLE SMALL CARD) -->
     <section>
       <h2>Side Projects</h2>
       <div class="grid">
 
-        <div class="flip-card">
+        <div class="flip-card small">
           <div class="flip-inner">
             <div class="flip-face flip-front">
-              <h3>Automator Pi</h3>
-              <p>iOS app for Automator control.</p>
+              <h3>Supporting & Utility Projects</h3>
+              <p>Automation tooling and companion applications.</p>
             </div>
             <div class="flip-face flip-back">
-              <p>
-                iOS application providing control and interface
-                for the Automator system.
-              </p>
-              <a href="https://github.com/rotsl/automator-pi" target="_blank">
-                View repository
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="flip-card">
-          <div class="flip-inner">
-            <div class="flip-face flip-front">
-              <h3>Diagnostics Pi</h3>
-              <p>iOS diagnostics app for Automator.</p>
-            </div>
-            <div class="flip-face flip-back">
-              <p>
-                iOS application for diagnostics and monitoring
-                of the Automator system.
-              </p>
-              <a href="https://github.com/rotsl/diagnostics-pi" target="_blank">
-                View repository
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="flip-card">
-          <div class="flip-inner">
-            <div class="flip-face flip-front">
-              <h3>GPU Build Automation</h3>
-              <p>System-level GPU environment automation.</p>
-            </div>
-            <div class="flip-face flip-back">
-              <p>
-                Automation tooling for GPU system configuration
-                and deployment.
-              </p>
-              <a href="https://github.com/rotsl/gpubuild" target="_blank">
-                View repository
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="flip-card">
-          <div class="flip-inner">
-            <div class="flip-face flip-front">
-              <h3>DermaScanAI</h3>
-              <p>ML-based dermatology image analysis.</p>
-            </div>
-            <div class="flip-face flip-back">
-              <p>
-                Machine learning system for dermatological
-                image analysis.
-              </p>
-              <a href="https://github.com/rorexus/DermaScanAI" target="_blank">
-                View repository
-              </a>
+              <p>Includes:</p>
+              <ul class="side-list">
+                <li>
+                  <a href="https://github.com/rotsl/automator-pi" target="_blank">
+                    Automator Pi
+                  </a>
+                  — iOS app for Automator
+                </li>
+                <li>
+                  <a href="https://github.com/rotsl/diagnostics-pi" target="_blank">
+                    Diagnostics Pi
+                  </a>
+                  — iOS diagnostics app for Automator
+                </li>
+                <li>
+                  <a href="https://github.com/rotsl/gpubuild" target="_blank">
+                    GPU Build Automation
+                  </a>
+                  — GPU system setup tooling
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -144,7 +106,7 @@
     </section>
 
     <div class="footer">
-      © Rohan — hosted on GitHub Pages
+      © rotsl — hosted on GitHub Pages
     </div>
   </div>
 
