Add publications section with technical links
Added a new section for publications with links to selected technical publications.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,51 @@
 
       </div>
     </section>
+    <section>
+  <h2>Publications</h2>
+  <div class="grid">
+
+    <div class="flip-card small">
+      <div class="flip-inner">
+        <div class="flip-face flip-front">
+          <h3>Electronics For You</h3>
+          <p>Selected technical publications.</p>
+        </div>
+        <div class="flip-face flip-back">
+          <ul class="side-list">
+            <li>
+              <a href="https://www.researchgate.net/publication/295402254_Air_Ioniser" target="_blank">
+                Air Ioniser
+              </a>
+            </li>
+            <li>
+              <a href="https://www.researchgate.net/publication/295402356_Micro_Inverter" target="_blank">
+                Micro Inverter
+              </a>
+            </li>
+            <li>
+              <a href="https://www.researchgate.net/publication/295402434_Sequential_device_switching_using_IR" target="_blank">
+                Sequential Device Switching Using IR
+              </a>
+            </li>
+            <li>
+              <a href="https://www.researchgate.net/publication/295402237_Some_projects_using_wearable_devices" target="_blank">
+                Projects Using Wearable Devices
+              </a>
+            </li>
+            <li>
+              <a href="https://www.researchgate.net/publication/295402442_Remote_Control" target="_blank">
+                Remote Control
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
     <div class="footer">
       © rotsl — hosted on GitHub Pages
