--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
   <meta charset="UTF-8" />
   <title>rotsl</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- SEO -->
+  <meta name="description" content="rotsl — research automation, computer vision, embedded systems, and applied machine learning projects." />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="rotsl" />
+  <meta property="og:description" content="Research automation, computer vision, embedded systems, and applied ML projects." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://rotsl.github.io/" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="rotsl" />
+  <meta name="twitter:description" content="Research automation and applied computer vision portfolio." />
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -65,7 +81,7 @@
       </div>
     </section>
 
-    <!-- SIDE PROJECTS (SINGLE SMALL CARD) -->
+    <!-- SIDE PROJECTS -->
     <section>
       <h2>Side Projects</h2>
       <div class="grid">
@@ -77,7 +93,6 @@
               <p>Automation tooling and companion applications.</p>
             </div>
             <div class="flip-face flip-back">
-              <p>Includes:</p>
               <ul class="side-list">
                 <li>
                   <a href="https://github.com/rotsl/automator-pi" target="_blank">
@@ -104,51 +119,52 @@
 
       </div>
     </section>
+
+    <!-- PUBLICATIONS -->
     <section>
-  <h2>Publications</h2>
-  <div class="grid">
+      <h2>Publications</h2>
+      <div class="grid">
 
-    <div class="flip-card small">
-      <div class="flip-inner">
-        <div class="flip-face flip-front">
-          <h3>Electronics For You</h3>
-          <p>Selected technical publications.</p>
+        <div class="flip-card small">
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>Electronics For You</h3>
+              <p>Selected technical publications.</p>
+            </div>
+            <div class="flip-face flip-back">
+              <ul class="side-list">
+                <li>
+                  <a href="https://www.researchgate.net/publication/295402254_Air_Ioniser" target="_blank">
+                    Air Ioniser
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.researchgate.net/publication/295402356_Micro_Inverter" target="_blank">
+                    Micro Inverter
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.researchgate.net/publication/295402434_Sequential_device_switching_using_IR" target="_blank">
+                    Sequential Device Switching Using IR
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.researchgate.net/publication/295402237_Some_projects_using_wearable_devices" target="_blank">
+                    Projects Using Wearable Devices
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.researchgate.net/publication/295402442_Remote_Control" target="_blank">
+                    Remote Control
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div class="flip-face flip-back">
-          <ul class="side-list">
-            <li>
-              <a href="https://www.researchgate.net/publication/295402254_Air_Ioniser" target="_blank">
-                Air Ioniser
-              </a>
-            </li>
-            <li>
-              <a href="https://www.researchgate.net/publication/295402356_Micro_Inverter" target="_blank">
-                Micro Inverter
-              </a>
-            </li>
-            <li>
-              <a href="https://www.researchgate.net/publication/295402434_Sequential_device_switching_using_IR" target="_blank">
-                Sequential Device Switching Using IR
-              </a>
-            </li>
-            <li>
-              <a href="https://www.researchgate.net/publication/295402237_Some_projects_using_wearable_devices" target="_blank">
-                Projects Using Wearable Devices
-              </a>
-            </li>
-            <li>
-              <a href="https://www.researchgate.net/publication/295402442_Remote_Control" target="_blank">
-                Remote Control
-              </a>
-            </li>
-          </ul>
-        </div>
+
       </div>
-    </div>
-
-  </div>
-</section>
-
+    </section>
 
     <div class="footer">
       © rotsl — hosted on GitHub Pages
