Add emoji to footer copyright text

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </section>
 
     <div class="footer">
-      © rotsl — hosted on GitHub Pages
+      © rotsl — hosted on GitHub Pages 😊
     </div>
   </div>
 
