Update description for GPU system setup tooling

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   <a href="https://github.com/rotsl/gpubuild" target="_blank">
                     GPU Build Automation
                   </a>
-                  — GPU system setup tooling
+                  — Physical GPU system setup tooling
                 </li>
               </ul>
             </div>
