--- a/index.html
+++ b/index.html
@@ -39,6 +39,48 @@
       <h2>Main Projects</h2>
       <div class="grid">
 
+        <!-- Wisp -->
+        <div class="flip-card">
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>🌬️ Wisp</h3>
+              <p>Context-aware, zero-dependency UI engine for the modern web.</p>
+            </div>
+            <div class="flip-face flip-back">
+              <p>
+                Context-aware semantic styling engine that analyzes HTML structure 
+                and auto-generates optimized CSS. Published on npm with 5KB footprint.
+              </p>
+              <a href="https://github.com/rotsl/wisp" target="_blank">
+                View repository
+              </a>
+              <br />
+              <a href="https://www.npmjs.com/package/@rotsl/wisp" target="_blank">
+                npm package →
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <!-- DermaScanAI -->
+        <div class="flip-card">
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>🩺 DermaScanAI</h3>
+              <p>AI-powered dermatological analysis and scanning system.</p>
+            </div>
+            <div class="flip-face flip-back">
+              <p>
+                Computer vision system for dermatological image analysis 
+                using deep learning techniques for skin condition detection.
+              </p>
+              <a href="https://github.com/rorexus/DermaScanAI" target="_blank">
+                View repository
+              </a>
+            </div>
+          </div>
+        </div>
+
         <!-- Automator -->
         <div class="flip-card">
           <div class="flip-inner">
@@ -124,6 +166,25 @@
     <section>
       <h2>Publications</h2>
       <div class="grid">
+
+        <div class="flip-card small">
+          <div class="flip-inner">
+            <div class="flip-face flip-front">
+              <h3>Research Papers</h3>
+              <p>Academic publications and technical papers.</p>
+            </div>
+            <div class="flip-face flip-back">
+              <ul class="side-list">
+                <li>
+                  <a href="https://www.researchgate.net/publication/400789148_Wisp_A_Context-Aware_Zero-Dependency_Semantic_Styling_Engine_for_the_Modern_Web" target="_blank">
+                    Wisp: A Context-Aware Zero-Dependency Semantic Styling Engine
+                  </a>
+                  — Research paper (2024)
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
 
         <div class="flip-card small">
           <div class="flip-inner">
